# ComfyUI-Anima_lora-Adapter

./: CLAUDE.md  README.md  __init__.py  adapter.py  chimera.py  fera.py  nodes.py  pyproject.toml  soft_tokens.py  step_expert.py
_vendor/: __init__.py
_vendor/networks/lora_modules/: router_state.py
